--- a/style.css
+++ b/style.css
@@ -50,25 +50,34 @@ body {
     display: grid;
     flex-grow: 1;
     color: white;
-    border: 3px solid red;
 }
 
 textarea {
-    color: white;
+    grid-column-start: 1;
+    grid-row-start: 1;
+    color: transparent;
+    caret-color: white;
     background-color: transparent;
-    border: 2px solid white;
     outline: none;
     resize: none;
     overflow: auto;
     width: 100%;
     height: 100%;
-    font-family: monospace;
     box-sizing: border-box;
     padding: 2% 5%;
 }
 
 pre {
+    margin: 0;
+    grid-column-start: 1;
+    grid-row-start: 1;
     white-space: pre-wrap;
-    border: 4px solid yellow;
-    font-size: small;
+    padding: 2% 5%;
+}
+
+textarea, pre, code {
+    line-height: 1.5;
+    tab-size: 4;
+    font-size: 14px;
+    white-space: pre-wrap;
 }
