removed the code element. Turned out the pre element by itself should work. update some css

--- a/style.css
+++ b/style.css
@@ -53,8 +53,6 @@ body {
 }
 
 textarea {
-    grid-column-start: 1;
-    grid-row-start: 1;
     color: transparent;
     caret-color: white;
     background-color: transparent;
@@ -65,20 +63,13 @@ textarea {
     width: 100%;
     height: 100%;
     box-sizing: border-box;
-    padding: 2% 5%;
 }
 
-pre {
+textarea, pre {
     margin: 0;
     grid-column-start: 1;
     grid-row-start: 1;
+    font-size: small;
     white-space: pre-wrap;
     padding: 2% 5%;
-}
-
-textarea, pre, code {
-    line-height: 1.5;
-    tab-size: 4;
-    font-size: 14px;
-    white-space: pre-wrap;
 }
