--- a/style.css
+++ b/style.css
@@ -29,9 +29,9 @@ body {
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
-    background-color: rgba(55, 65, 81, 0.9);
+    background-color: rgba(55, 65, 81, 0.8);
     height: 300px;
-    width: 450px;
+    width: 500px;
     border-radius: 10px;
 }
 
@@ -70,7 +70,7 @@ textarea, pre {
     margin: 0;
     grid-column-start: 1;
     grid-row-start: 1;
-    font-size: small;
+    font-size: medium;
     white-space: pre-wrap;
     padding: 2% 5%;
 }
