--- a/style.css
+++ b/style.css
@@ -23,6 +23,7 @@ body {
     border-radius: 3%;
     align-items: center;
     justify-content: center;
+    box-shadow: 0px 0px 100px black;
 }
 
 .code-section {
@@ -33,6 +34,7 @@ body {
     height: 300px;
     width: 500px;
     border-radius: 10px;
+    box-shadow: 0px 0px 10px black;
 }
 
 .code-window-header {
