--- a/style.css
+++ b/style.css
@@ -8,15 +8,36 @@ body {
 
 body {
     display: flex;
+    flex-direction: column;
     min-height: 100vh;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
     margin: auto;
     box-sizing: border-box;
 }
 
+.banner {
+    display: flex;
+    flex-grow: 0;
+    min-height: 250px;
+    justify-content: center;
+    align-items: center;
+}
+
+.banner h1 {
+    color: white;
+    font-size: 60px;
+    font-weight: 200;
+    font-family: Helvetica, Verdana, Geneva;
+}
+
+.footer {
+    min-height: 250px;
+}
+
 .main-container {
     display: flex;
+    flex-grow: 1;
     background-image: linear-gradient(#e66465, #9198e5);
     height: 500px;
     width: 800px;
