--- a/style.css
+++ b/style.css
@@ -54,7 +54,7 @@ body {
     display: flex;
     flex-grow: 1;
     background-image: linear-gradient(#e66465, #9198e5);
-    height: 500px;
+    height: 520px;
     width: 700px;
     border-radius: 2%;
     align-items: center;
@@ -66,16 +66,17 @@ body {
 .toolbar {
     display: flex;
     flex-direction: column;
+    gap: 10px;
 }
 
-.bgcolor-toolbar {
+.vertical-toolbar {
     background-color: white;
     box-shadow: 0px 0px 20px rgb(189, 189, 189);
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: flex-start;
-    gap: 15px;
+    gap: 10px;
     padding: 10px;
     border-radius: 50px;
 }
@@ -124,7 +125,13 @@ body {
     background: #FFE000;
     background: -webkit-linear-gradient(to bottom, #799F0C, #FFE000);
     background: linear-gradient(to bottom, #799F0C, #FFE000);
+}
 
+.plus-sign {
+    display: flex;
+    font-size: larger;
+    font-weight: 400;
+    justify-content: center;
 }
 
 .code-section {
