--- a/style.css
+++ b/style.css
@@ -94,6 +94,11 @@ body {
     border-radius: 50px;
 }
 
+.bgcolor-selector:hover {
+    outline: 2px solid white;
+    box-shadow: 0px 2px 10px;
+}
+
 .gradient1 {
     /* outline: 3px solid gray; */
     background: #b92b27;
