--- a/style.css
+++ b/style.css
@@ -58,10 +58,9 @@ body {
     box-sizing: border-box;
 }
 
-.main-container {
+#main-container {
     display: flex;
     flex-grow: 1;
-    background-image: linear-gradient(#e66465, #9198e5);
     height: 520px;
     width: 700px;
     border-radius: 2%;
@@ -100,13 +99,10 @@ body {
 }
 
 .gradient1 {
-    /* outline: 3px solid gray; */
-    background: #b92b27;
-    /* fallback for old browsers */
-    background: -webkit-linear-gradient(to bottom, #1565C0, #b92b27);
-    /* Chrome 10-25, Safari 5.1-6 */
-    background: linear-gradient(to bottom, #1565C0, #b92b27);
-    /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    background: #9198e5;
+    background: -webkit-linear-gradient(#e66465, #9198e5);
+    background-image: linear-gradient(#e66465, #9198e5);
+
 }
 
 .gradient2 {
@@ -128,9 +124,13 @@ body {
 }
 
 .gradient5 {
-    background: #373B44;
-    background: -webkit-linear-gradient(to bottom, #4286f4, #373B44);
-    background: linear-gradient(to bottom, #4286f4, #373B44);
+    /* outline: 3px solid gray; */
+    background: #b92b27;
+    /* fallback for old browsers */
+    background: -webkit-linear-gradient(to bottom, #1565C0, #b92b27);
+    /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to bottom, #1565C0, #b92b27);
+    /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
 
 .gradient6 {
@@ -266,6 +266,10 @@ pre {
     flex-grow: 1;
     min-width: 120px;
     align-items: center;
+}
+
+bgcolor-selector download:hover+.vertical-label.action-buttons {
+    background-color: #11998e;
 }
 
 .vertical-label.theme-mode {
