--- a/style.css
+++ b/style.css
@@ -53,12 +53,37 @@ body {
 .footer {
     flex-grow: 1;
     display: flex;
-    align-items: flex-end;
-    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
     gap: 10px;
-    padding: 20px;
+    padding-top: 50px;
     box-sizing: border-box;
     min-height: 200px;
+}
+
+#messages {
+    flex-grow: 1;
+    color: gray;
+    font-size: larger;
+    font-weight: 100;
+    opacity: 0;
+}
+
+#messages.showing {
+    animation: fadeAnimation 1.5s;
+    animation-fill-mode: forwards;
+    opacity: 1;
+}
+
+@keyframes fadeAnimation {
+    from {
+        opacity: 0;
+    }
+
+    to {
+        opacity: 1;
+    }
 }
 
 #main-container {
