--- a/style.css
+++ b/style.css
@@ -1,12 +1,27 @@
-body {
-    background: #F9F9F9;
+:root {
+    --bg-color: #F9F9F9;
+    --text-color: rgb(33, 33, 33);
+    --box-shadow-color: gray;
+    --speed: 1s;
     font-family: Helvetica, Verdana, Geneva;
+}
+
+body {
+    background-color: var(--bg-color);
+    color: var(--text-color);
+    transition: background-color var(--speed), color var(--speed);
     display: flex;
     min-height: 100vh;
     justify-content: center;
     align-items: center;
     box-sizing: border-box;
     gap: 20px;
+}
+
+body.dark {
+    --bg-color: #36404b;
+    --text-color: white;
+    --box-shadow-color: #282f37;
 }
 
 .left-side,
@@ -29,7 +44,6 @@ body {
 
 .header h1,
 .header span {
-    color: black;
     font-size: 30px;
 }
 
@@ -102,7 +116,7 @@ body {
     align-items: center;
     justify-content: center;
     outline: 2px solid white;
-    box-shadow: 5px 10px 30px gray;
+    box-shadow: 5px 10px 30px var(--box-shadow-color);
 }
 
 .toolbar {
@@ -113,7 +127,7 @@ body {
 
 .vertical-toolbar {
     background-color: white;
-    box-shadow: 0px 0px 20px rgb(189, 189, 189);
+    box-shadow: 0px 0px 20px var(--box-shadow-color);
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -299,7 +313,6 @@ pre {
     flex-direction: column;
     justify-content: center;
     font-size: small;
-    color: gray;
     padding: 10px;
 }
 
@@ -320,7 +333,6 @@ bgcolor-selector download:hover+.vertical-label.action-buttons {
     flex-direction: column;
     justify-content: center;
     font-size: small;
-    color: gray;
     padding: 10px;
 }
 
