--- a/style.css
+++ b/style.css
@@ -34,6 +34,7 @@ body.dark {
 .center-side {
     display: flex;
     flex-direction: column;
+    flex-grow: 0;
 }
 
 .header {
@@ -112,8 +113,6 @@ body.dark {
 #main-container {
     display: flex;
     flex-grow: 1;
-    height: 520px;
-    width: 700px;
     border-radius: 2%;
     align-items: center;
     justify-content: center;
@@ -239,10 +238,9 @@ body.dark {
     flex-direction: column;
     justify-content: flex-start;
     background-color: var(--bg-color-code);
-    height: 400px;
-    width: 600px;
     border-radius: 10px;
     box-shadow: 0px 0px 10px black;
+    margin: 50px;
 }
 
 .code-window-header {
